--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ tensorboard==2.11.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.11.0
+tensorflow-addons==0.19.0
 tensorflow-estimator==2.11.0
 tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.29.0
@@ -112,6 +113,7 @@ termcolor==2.2.0
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+toolz==0.12.0
 tornado==6.2
 traitlets==5.8.1
 typing-extensions==4.4.0
